refactoring syscalls